# scriptory

./: .env.example  .env.maintainer  .gitignore  Makefile  README.md  docker-compose.yml  hierophant.example.toml  magister.example.toml
.github/: pull_request_template.md
.github/workflows/: codeql.yml
src/fibonacci/: Cargo.toml  Dockerfile
src/fibonacci/contracts/src/fixtures/: plonk-fixture.json
src/fibonacci/script/: Cargo.toml
src/fibonacci/src/: lib.rs
src/risc0-fibonacci/: Cargo.toml  Dockerfile
src/risc0-fibonacci/guest/: Cargo.toml
src/risc0-fibonacci/guest/src/: main.rs
src/risc0-fibonacci/host/: Cargo.toml  build.rs
src/risc0-fibonacci/host/src/: main.rs
src/sp1-fibonacci/: Dockerfile
src/sp1-fibonacci/lib/src/: lib.rs
src/sp1-fibonacci/program/: Cargo.toml
src/sp1-fibonacci/program/src/: main.rs
src/sp1-fibonacci/script/: Cargo.toml
