[package]
name = "fibonacci-host"
version = "0.1.0"
edition = "2021"

# risc0-build reads this section during build.rs execution to discover guest
# crates. The paths are relative to this Cargo.toml. Each entry must point at
# a crate that produces a binary compiled for the riscv32im-risc0-zkvm-elf
# target.
[package.metadata.risc0]
methods = ["../guest"]

[[bin]]
name = "evm"
path = "src/main.rs"

[build-dependencies]
risc0-build = "3.0"

[dependencies]

# Paired with the risc0-zkvm version the hierophant contemplant links against
# (currently 2.3.x). If that version is bumped, bump bonsai-sdk in lockstep or
# the Bonsai wire format will drift.
risc0-zkvm = { version = "3.0", default-features = false, features = ["client"] }

# Shared fibonacci(n); used here to cross-check the guest's committed
# journal against an out-of-circuit computation. Same crate the guest
# uses, reached via path-dep across workspaces.
fibonacci = { path = "../../fibonacci" }
bonsai-sdk = "1.4"
bincode = "1.3"
bytemuck = "1"
hex = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"

# Used for the raw calls that bonsai-sdk 1.4 doesn't expose directly:
# passing proof_mode on session/create and driving the two-step snark/create
# wrap flow (create → poll → download).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
