[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "evm"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
# scriptory's evm.rs only generates and serializes proofs; verification
# happens server-side at Hierophant. We therefore omit sp1-sdk's
# `native-gnark` feature (and its CGO / gnark-go build dependency), since
# that feature only matters for the client.verify path.
sp1-sdk = "5.0.8"
clap = { version = "4.0", features = ["derive", "env"] }
# Used by create_proof_fixture in src/bin/evm.rs to dump a JSON fixture
# alongside each Plonk/Groth16 run. The fixture is for out-of-band
# Solidity verification; the output dir is gitignored so it never lands
# in a commit.
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "5.0.8"
